force-app/main/default/objects/Account/fields/Business_Size__c.field-meta.xml
<CustomField>
    <fullName>Business_Size__c</fullName>
    <inlineHelpText>Business size refers to the size of a company’s operations.</inlineHelpText>
    <label>Business Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Micro-sized business: less than 10 employees</fullName>
            </value>
            <value>
                <fullName>Small-sized business: 10-49 employees</fullName>
            </value>
            <value>
                <fullName>Medium business: 50-249 employees</fullName>
            </value>
            <value>
                <fullName>Large-sized business: more than 250 employees.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>