force-app/main/default/objects/Account/fields/BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnit__c</fullName>
    <label>BusinessUnit</label>
    <length>40</length>
    <type>Text</type>
</CustomField>