force-app/main/default/objects/Account/fields/CRMforNonProfit__Account_Num__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Account_Num__c</fullName>
    <label>Account Num.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>