force-app/main/default/objects/Account/fields/CRMforNonProfit__Average_Donation__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Average_Donation__c</fullName>
    <formula>CRMforNonProfit__celkova_hodnota_finacni_dary__c / CRMforNonProfit__pocet_financnich_daru__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Donation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>