force-app/main/default/objects/Account/fields/CRMforNonProfit__datum_posledniho_financniho_daru__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__datum_posledniho_financniho_daru__c</fullName>
    <label>Datum posledního finančního daru</label>
    <type>DateTime</type>
</CustomField>