force-app/main/default/objects/Account/fields/CRMforNonProfit__DniMeziDary__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__DniMeziDary__c</fullName>
    <formula>IF(   CRMforNonProfit__pocet_financnich_daru__c &gt; 0, ( DATEVALUE(  CRMforNonProfit__datum_posledniho_financniho_daru__c ) -  CRMforNonProfit__First_Transaction_Date__c ) / CRMforNonProfit__pocet_financnich_daru__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Počet dní mezi dary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>