force-app/main/default/objects/Account/fields/CRMforNonProfit__First_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__First_Transaction_Date__c</fullName>
    <label>First Transaction Date</label>
    <type>Date</type>
</CustomField>