force-app/main/default/objects/Account/fields/CRMforNonProfit__pocet_financnich_daru__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__pocet_financnich_daru__c</fullName>
    <label>Počet finančních darů</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>