force-app/main/default/objects/Account/fields/CRMforNonProfit__Transaction_Amount_2008__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Transaction_Amount_2008__c</fullName>
    <label>Transaction Amount 2008</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>