force-app/main/default/objects/Account/fields/CRMforNonProfit__Transaction_Count_2009__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Transaction_Count_2009__c</fullName>
    <label>Transaction Count 2009</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>