force-app/main/default/objects/Account/fields/Logitude_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Logitude_Latitude__c</fullName>
    <label>Logitude&amp;Latitude</label>
    <scale>0</scale>
    <type>Location</type>
</CustomField>