force-app/main/default/objects/Account/fields/Ptest108__c.field-meta.xml
<CustomField>
    <fullName>Ptest108__c</fullName>
    <description>Creating external Field test</description>
    <externalId>true</externalId>
    <label>Ptest6__c</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>