force-app/main/default/objects/Account/fields/Ptest132__c.field-meta.xml
<CustomField>
    <fullName>Ptest132__c</fullName>
    <description>Creating external Field test</description>
    <externalId>true</externalId>
    <label>Ptest885__c</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>