force-app/main/default/objects/Account/fields/Regions_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>Regions_of_Operation__c</fullName>
    <label>Head Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Asia-Pacific</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>