force-app/main/default/objects/Account/fields/Service_Tier__c.field-meta.xml
<CustomField>
    <fullName>Service_Tier__c</fullName>
    <label>Service Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Platinum</fullName>
            </value>
            <value>
                <fullName>2 - Gold</fullName>
            </value>
            <value>
                <fullName>3 - Silver</fullName>
            </value>
            <value>
                <fullName>4 - Bronze</fullName>
            </value>
            <value>
                <fullName>5 - Brass</fullName>
            </value>
            <value>
                <fullName>Undefined</fullName>
                <isActive>false</isActive>
                <label>Undefined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>