force-app/main/default/objects/Account/fields/Ssn__c.field-meta.xml
<CustomField>
    <fullName>Ssn__c</fullName>
    <label>Ssn</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>