force-app/main/default/objects/Account/recordTypes/Business_type.recordType-meta.xml
<RecordType>
    <fullName>Business_type</fullName>
    <active>true</active>
    <label>Business type</label>
</RecordType>