force-app/main/default/objects/Account/validationRules/Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Account</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
   ISBLANK(  AccountNumber ),
   NOT(ISNUMBER(  AccountNumber ))
)</errorConditionFormula>
    <errorDisplayField>AccountNumber</errorDisplayField>
    <errorMessage>Account Number is not numeric.</errorMessage>
</ValidationRule>