force-app/main/default/objects/Account/validationRules/Account_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(CONTAINS(Name, &apos;Corp&apos;))</errorConditionFormula>
    <errorMessage>Account Name must contain &apos;Corp&apos;.</errorMessage>
</ValidationRule>