force-app/main/default/objects/Account/validationRules/Account_Number_Numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Number_Numeric</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
ISBLANK(AccountNumber),
NOT(ISNUMBER(AccountNumber))
)</errorConditionFormula>
    <errorMessage>The account number should be Numeric</errorMessage>
</ValidationRule>